--- a/Performance_analyse.ipynb
+++ b/Performance_analyse.ipynb
@@ -274,12 +274,11 @@
     "from Ensemble_model import FusionModel\n",
     "from mmseg.core.evaluation import metrics\n",
     "\n",
-    "def get_model_IoU(idx, model):\n",
+    "def get_model_IoU(idx, model, device):\n",
     "    # FusionModel inference\n",
     "    tensor_dict, annotation_tensor = test_tensor_dataset[idx]\n",
     "    annotation_tensor -= 1 # 忽略背景类，将label范围从1-150变为0-149\n",
     "\n",
-    "    device = 'cuda:0'\n",
     "    deeplabv3p_logits_res = tensor_dict['deeplabv3p'].to(device)\n",
     "    pspnet_logits_res = tensor_dict['pspnet'].to(device)\n",
     "    fcn_logits_res = tensor_dict['fcn'].to(device)\n",
@@ -294,7 +293,8 @@
     "    return fusion_IoU_result\n",
     "\n",
     "model = torch.load('/root/Desktop/我的网盘/fusion_model.pth')   \n",
-    "fusion_IoU_result = get_model_IoU(0, model)\n",
+    "model = model.to('cuda:1')\n",
+    "fusion_IoU_result = get_model_IoU(0, model, 'cuda:1')\n",
     "print(\"fusion_IoU_result: \", fusion_IoU_result)"
    ]
   },
@@ -319,7 +319,8 @@
     "\n",
     "test_IoU = []\n",
     "for i in tqdm(range(len(test_img_dataset))):\n",
-    "    pspnet_IoU_result, fusion_IoU_result, vote_IoU_result, fcn_IoU_result, deeplabv3p_IoU_result = get_model_IoU(i, model)\n",
+    "    pspnet_IoU_result, vote_IoU_result, fcn_IoU_result, deeplabv3p_IoU_result = get_base_IoU(i)\n",
+    "    fusion_IoU_result = get_model_IoU(i, model, 'cuda:1')\n",
     "    iter_IoU = [pspnet_IoU_result, fusion_IoU_result, vote_IoU_result, fcn_IoU_result, deeplabv3p_IoU_result]\n",
     "    test_IoU.append(iter_IoU)\n",
     "\n",
@@ -335,7 +336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('openmmlab')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -349,11 +350,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "1232f5eceeacaa055091cf53f6a91bb3606f94d78230d8923ada4d3a46748a70"
+    "hash": "a9da64c2fa4a110d6089bfe4724cddcff253a9e81417e9b09016aa1a3b411001"
    }
   }
  },
