--- a/Performance_analyse.ipynb
+++ b/Performance_analyse.ipynb
@@ -316,6 +316,7 @@
     "from collections import Counter\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
+    "import numpy as np\n",
     "\n",
     "test_IoU = []\n",
     "for i in tqdm(range(len(test_img_dataset))):\n",
@@ -323,6 +324,9 @@
     "    fusion_IoU_result = get_model_IoU(i, model, 'cuda:1')\n",
     "    iter_IoU = [pspnet_IoU_result, fusion_IoU_result, vote_IoU_result, fcn_IoU_result, deeplabv3p_IoU_result]\n",
     "    test_IoU.append(iter_IoU)\n",
+    "\n",
+    "test_IoU_array = np.array(test_IoU)\n",
+    "np.save('/root/Desktop/我的网盘/test_IoU.npy',test_IoU_array)\n",
     "\n",
     "best_method = []\n",
     "method_dic = {0:'pspnet', 1:'fusion', 2:'vote', 3:'fcn', 4:'deeplabv3p'}\n",
