--- a/Performance_analyse.ipynb
+++ b/Performance_analyse.ipynb
@@ -263,7 +263,7 @@
     "    pspnet_logits_res = tensor_dict['pspnet'].to(device)\n",
     "    fcn_logits_res = tensor_dict['fcn'].to(device)\n",
     "\n",
-    "    res = model.forward(deeplabv3p_logits_res, pspnet_logits_res, fcn_logits_res) # (1, 150, H, W)\n",
+    "    res = model.forward(deeplabv3p_logits_res, pspnet_logits_res, fcn_logits_res) # (150, H, W)\n",
     "    res = res.argmax(0)\n",
     "    \n",
     "    # calculate IoU\n",
@@ -494,6 +494,65 @@
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(df, cmap='Blues')\n",
     "plt.title('weight of different methods')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "fa85fc61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pspnet        0.512570\n",
+       "fusion        0.614722\n",
+       "vote          0.547305\n",
+       "fcn           0.498177\n",
+       "deeplabv3p    0.542143\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_IoU_array = np.load('test_IoU.npy')\n",
+    "test_IoU_df = pd.DataFrame(test_IoU_array, columns=['pspnet', 'fusion', 'vote', 'fcn', 'deeplabv3p'])\n",
+    "test_IoU_df.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb70fa81",
+   "metadata": {},
+   "source": [
+    "### EnSeg分割结果可视化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ac60513",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mmseg.apis import show_result_pyplot\n",
+    "# FusionModel inference\n",
+    "tensor_dict, annotation_tensor = test_tensor_dataset[2]\n",
+    "annotation_tensor -= 1 # 忽略背景类，将label范围从1-150变为0-149\n",
+    "    \n",
+    "deeplabv3p_logits_res = tensor_dict['deeplabv3p'].to(device)\n",
+    "pspnet_logits_res = tensor_dict['pspnet'].to(device)\n",
+    "fcn_logits_res = tensor_dict['fcn'].to(device)\n",
+    "\n",
+    "res = model.forward(deeplabv3p_logits_res, pspnet_logits_res, fcn_logits_res) # (150, H, W)\n",
+    "res_pred = res.argmax(0) + 1\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
