--- a/Performance_analyse.ipynb
+++ b/Performance_analyse.ipynb
@@ -55,6 +55,7 @@
    ],
    "source": [
     "def plot_data(train_accs, val_accs, train_losses, val_losses, step_size):\n",
+    "    # Get \n",
     "    import matplotlib.pyplot as plt\n",
     "    train_idx = np.arange(0, len(train_accs))\n",
     "    val_idx = np.arange(0, len(train_accs), step_size) + step_size\n",
@@ -201,6 +202,9 @@
     "from tools import majorVote\n",
     "import torch\n",
     "\n",
+    "'''\n",
+    "分别返回 PSPNet, MajorVote, FCN, DeepLabv3p 单张图像的 IoU 结果\n",
+    "'''\n",
     "def get_base_IoU(idx):\n",
     "    img_path = test_img_dataset.get_img_path(idx)\n",
     "    label = test_img_dataset.get_label_as_PIL(idx)\n",
@@ -451,6 +455,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# 模型当中所有的权重加载到 df 当中\n",
     "df = pd.DataFrame()\n",
     "# print(model.state_dict())\n",
     "for name in model.state_dict():\n",
@@ -558,7 +563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.8.13 ('openmmlab')",
    "language": "python",
    "name": "python3"
   },
@@ -572,11 +577,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a9da64c2fa4a110d6089bfe4724cddcff253a9e81417e9b09016aa1a3b411001"
+    "hash": "1232f5eceeacaa055091cf53f6a91bb3606f94d78230d8923ada4d3a46748a70"
    }
   }
  },
