--- a/Performance_analyse.ipynb
+++ b/Performance_analyse.ipynb
@@ -5,7 +5,7 @@
    "id": "ddbba80c",
    "metadata": {},
    "source": [
-    "### 加载训练数据"
+    "### Load Data"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "id": "631738a1",
    "metadata": {},
    "source": [
-    "### 训练数据可视化"
+    "### Visualization"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "id": "4760d84f",
    "metadata": {},
    "source": [
-    "### 与原始数据在测试集进行性能比较"
+    "### Performence on Test set"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "id": "c3cd727b",
    "metadata": {},
    "source": [
-    "### 基础模型结果推理"
+    "### Three base  model tensor inference"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "id": "87716136",
    "metadata": {},
    "source": [
-    "### 画出Test set上表现最好的方法"
+    "### Best method"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 加载本地测试集IoU数据"
+    "### Load local IoU data"
    ]
   },
   {
@@ -427,7 +427,7 @@
    "id": "4a88cbdb",
    "metadata": {},
    "source": [
-    "### FusionModel 权重可视化"
+    "### FusionModel visualization"
    ]
   },
   {
@@ -549,37 +549,6 @@
     "# test_IoU_array = np.load('test_IoU_50.npy')\n",
     "test_IoU_df = pd.DataFrame(test_IoU, columns=['pspnet', 'fusion', 'vote', 'fcn', 'deeplabv3p'])\n",
     "test_IoU_df.mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bb70fa81",
-   "metadata": {},
-   "source": [
-    "### EnSeg分割结果可视化"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ac60513",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mmseg.apis import show_result_pyplot\n",
-    "# FusionModel inference\n",
-    "tensor_dict, annotation_tensor = test_tensor_dataset[2]\n",
-    "annotation_tensor -= 1 # 忽略背景类，将label范围从1-150变为0-149\n",
-    "    \n",
-    "deeplabv3p_logits_res = tensor_dict['deeplabv3p'].to(device)\n",
-    "pspnet_logits_res = tensor_dict['pspnet'].to(device)\n",
-    "fcn_logits_res = tensor_dict['fcn'].to(device)\n",
-    "\n",
-    "res = model.forward(deeplabv3p_logits_res, pspnet_logits_res, fcn_logits_res) # (150, H, W)\n",
-    "res_pred = res.argmax(0) + 1\n",
-    "\n",
-    "\n",
-    "\n"
    ]
   }
  ],
