--- a/show seg res.ipynb
+++ b/show seg res.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3bd94b5c",
-   "metadata": {},
-   "source": [
-    "### 加载模型推理预测结果"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "54807a6c",
    "metadata": {},
    "source": [
-    "#### 加载预训练模型"
+    "### Load pretrained model"
    ]
   },
   {
@@ -141,7 +133,7 @@
    "id": "f07e16b7",
    "metadata": {},
    "source": [
-    "#### 加载EnSeg模型，推理fusion结果"
+    "#### Load EnSeg，inference fusion result"
    ]
   },
   {
